2010-01-07  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: new class Rcpp::CharacterVector
	to manage character vectors (STRSXP)
	* src/CharacterVector.cpp: implementation
	* inst/unitTests/runit.CharacterVector.R: unit tests

	* src/Rcpp/WeakReference.h: new class Rcpp::WeakReference
	to wrap WEAKREFSXP with accessors to the key and value
	* src/WeakReference.cpp: implementation

	* src/Rcpp/Rcpp_Rinternals.h: borrowed from Rinternals so that
	we can use VECTOR_PTR (which R forbids unless we define
	USE_RINTERNALS, but defining it disables NO_R_REMAP)

	* src/Rcpp/GenericVector.h : added begin and end to allow
	stl type iteration over generic vectors.

2010-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppCommon.h: Protect definition of logTxt by #ifndef
	* inst/doc/Rcpp-unitTests.Rnw: Minor LaTeX tweak

2010-01-06  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/wrap.h : wrap can now use initializer lists (available
	on on GCC >= 4.4).
	* src/wrap.cpp: implementation
	* int/unitTests/runit.wrap.R: unit tests

	* src/RObject.cpp : make methods RObject::asFoo
	calling Rcpp::as<Foo> to avoid code duplication

2010-01-05  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/GenericVector.h : new class Rcpp::GenericVector
	and an alias Rcpp::List to handle lists (VECSXP), aka generic
	vectors
	* src/NumericVector.cpp : implementation
	* inst/unitTests/runit.NumericVector.R: unit tests

	* src/Rcpp/IntegerVector.h : new class Rcpp::IntegerVector
	to manage integer vector (INTSXP). IntegerVector can be
	constructed from SEXP of appropriate type, from an int which
	simply allocates a vector that big, or using an
	initialization list (the last is GCC >= 4.4 only).
	Additionally IntegerVector defines begin() and end() so that
	they can be used in STL algorithms
	* src/IntegerVector.cpp : implementation
	* inst/unitTests/runit.IntegerVector.R: unit tests

	* src/Rcpp/NumericVector.h : same as above, but for numeric
	vectors (REALSXP)