@@ -1,7 +1,8 @@
 2010-01-07  Romain Francois <francoisromain@free.fr>
 
 	* src/Rcpp/CharacterVector.h: new class Rcpp::CharacterVector
-	to manage character vectors (STRSXP)
+	to manage character vectors (STRSXP). StringVector is a 
+	convenience typedef equivalent to CharacterVector
 	* src/CharacterVector.cpp: implementation
 	* inst/unitTests/runit.CharacterVector.R: unit tests
 
@@ -14,7 +15,13 @@
 	USE_RINTERNALS, but defining it disables NO_R_REMAP)
 
 	* src/Rcpp/GenericVector.h : added begin and end to allow
-	stl type iteration over generic vectors.
+	stl type iteration over generic vectors. Now using the 
+	Proxy pattern (from Item 30 of More Effective C++) to 
+	allow getting and setting the elements of the list through
+	the operator[].
+
+	* int/unitTests/runit.GenericVector.R: examples are reworked
+	using [] where set and get were used.
 
 2010-01-06  Dirk Eddelbuettel  <edd@debian.org>
 
